--- a/index.html
+++ b/index.html
@@ -1,74 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="keywords"
-      content="react,reactjs,react component,component,select,form,autocomplete,control,ui,javascript"
-    />
-    <meta
-      name="description"
-      content="A flexible and beautiful Select Input control for ReactJS with multiselect, autocomplete and ajax support."
-    />
-    <meta property="og:locale" content="en-us" />
-    <meta property="og:title" content="React-Select" />
-    <meta
-      property="og:description"
-      content="A flexible and beautiful Select Input control for ReactJS with multiselect, autocomplete and ajax support."
-    />
-    <meta property="og:url" content="https://react-select.com" />
-    <meta property="og:site_name" content="React-Select" />
-    <meta property="og:type" content="article" />
-    <meta http-equiv="refresh" content="0;url=https://react-select.com" />
-    <link rel="canonical" href="https://react-select.com" />
-  </head>
-  <style type="text/css">
-    body {
-      background: #edf2f8;
-      color: #323f4e;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-        "Segoe UI Symbol";
-    }
-    a,
-    a:visited {
-      color: #115cc5;
-    }
-    a:hover {
-      color: #2075e9;
-    }
-    h1 {
-      font-size: 32px;
-    }
-    h2 {
-      font-size: 28px;
-    }
-    .container {
-      height: 100%;
-      position: relative;
-    }
-    .box {
-      margin: 200px auto 0 auto;
-      max-width: 400px;
-      padding: 30px;
-      text-align: center;
-      background: white;
-      border-radius: 3px;
-      box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
-    }
-  </style>
-  <body>
-    <div class="container">
-      <div class="box">
-        <h1>
-          React-Select documentation has been moved to
-          <a href="https://react-select.com">https://react-select.com</a>
-        </h1>
-        <h2>Hold tight while we redirect you!</h2>
-      </div>
-    </div>
-  </body>
-</html>
+<!doctype html>
+<head>
+	<meta charset="utf-8">
+	<title>React-Select</title>
+	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+	<meta name="keywords" content="react,reactjs,react component,component,select,form,autocomplete,control,ui,javascript">
+	<meta name="description" content="A flexible and beautiful Select Input control for ReactJS with multiselect, autocomplete and ajax support.">
+	<meta property="og:locale" content="en-us">
+	<meta property="og:title" content="React-Select">
+	<meta property="og:description" content="A flexible and beautiful Select Input control for ReactJS with multiselect, autocomplete and ajax support.">
+	<meta property="og:url" content="https://jedwatson.github.io/react-select">
+	<meta property="og:site_name" content="React-Select">
+	<meta property="og:type" content="article">
+	<link rel="stylesheet" href="index.css">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122737675-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-122737675-1');
+	</script>
+	<!--
+	NOTE: Include the polyfill below if you are testing the async/await example
+	<script language="javascript" src="https://unpkg.com/babel-polyfill@6.26.0/dist/polyfill.min.js"></script>
+	-->
+</head>
+<body>
+	<div id="root"></div>
+	<script src="index.js"></script>
+</body>
